# soul-link

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: README.md
docs/: DESIGN.md
examples/personas/default/: MEMORY.md  SOUL.md  USER.md  config.yaml
examples/personas/professional-advisor/: MEMORY.md  SOUL.md  USER.md  config.yaml
examples/personas/tsundere-assistant/: MEMORY.md  SOUL.md  USER.md  config.yaml
examples/proactive_chat/: proactive_chat_check.py  proactive_chat_context_reader.py  proactive_chat_trigger.sh
persona/: .next_proactive_chat  MOMENTS.md  STATE.md
src/soul_link/: __init__.py  cli.py
src/soul_link/behavior/: __init__.py  controller.py  strategies.py
src/soul_link/core/: __init__.py  config.py  engine.py
src/soul_link/emotion/: __init__.py  analyzer.py  calculator.py  detector.py  models.py
src/soul_link/integrations/: hermes.py  openclaw.py
src/soul_link/llm/: __init__.py  client.py
src/soul_link/persona/: __init__.py  loader.py  moments.py  state.py
src/soul_link/web/: __init__.py  app.py
src/soul_link/web/static/css/: style.css
src/soul_link/web/static/js/: app.js
src/soul_link/web/templates/: index.html
